--- a/html/pages/homeassistant_project.html
+++ b/html/pages/homeassistant_project.html
@@ -14,19 +14,17 @@
 </head>
 
 <body>
-
   <div class="container max-w-screen-xl row_pr">
     <div class="projectAnim1">
       <div class="alignCenter">
-        <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
+        <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" alt="Logo"/>
       </div>
-
       <div class="container_ref">
         <div class="row justify-content-center">
           <div class="col-auto">
             <div class="card_Ac">
               <a class="a_ref" href="../../index.html">
-                <h1 class="text_navlink p-2 m-2"> Profile </h1>
+                <h1 class="text_navlink p-2 m-2">Profile</h1>
               </a>
             </div>
           </div>
@@ -39,48 +37,41 @@
           </div>
         </div>
       </div>
-
-      <h1 class="header1">
-        HomeAssistant
-      </h1>
-      <h1 class="header2">
-        Self-Hosted Homeserver
-      </h1>
+      <h1 class="header1">HomeAssistant</h1>
+      <h1 class="header2">Self-Hosted Homeserver</h1>
     </div>
-    
     <div class="mb-5 projectAnim2">
-      <img src="../../img/homeassistant/HomAD.png" class="d-block w-100 rounded2 zoomD" alt="...">
+      <img src="../../img/homeassistant/HomAD.png" class="d-block w-100 rounded2 zoomD" alt="Image Homeassistant">
     </div>
-
+    <!-- Box for fullscreen view of image! -->
     <div id="lightbox"> </div>
-
     <div class="projectAnim3">
       <div class="card mb-5 card_pr">
         <h5 class="card-header header_pr">About the Project</h5>
         <div class="card-body">
           <h5 class="card-title">Task</h5>
-          <p class="card-text">The idea of this project was to deploy my own home server for all my smart home devices
-            on
-            a Raspberry Pi.
+          <p class="card-text">
+            The idea of this project was to deploy my own home server for all my smart home devices locally on a Raspberry Pi.
           </p>
           <h5 class="card-title">Functionality</h5>
-          <p class="card-text">This self-hosted home server provides the benefits of a much faster connection among all
+          <p class="card-text">             
+            This self-hosted home server provides the benefits of a much faster connection among all
             smart home devices. Furthermore, because of the local approach, no data gets passed through data centers in
             the cloud, which opens up a whole new way of privacy. In companion with the Mycroft project, I can also
             control all my devices through voice commands. With this combination, I can fully replace the Google
-            services
-            or Other cloud providers for smart home.
+            Services or other cloud providers for smart home. The downside of this approach is the fact that it is impossible to reach the 
+            system from outside the network without any special customization. This limits the system to specific automations
+            and other functionality that require data from outside the network. Nevertheless, the improved privacy and security 
+            is more important to my because all the core requirements to the system are met.
           </p>
         </div>
       </div>
-
       <div class="card mb-5 card_pr">
         <h5 class="card-header header_pr">Source Project</h5>
         <div class="card-body">
           <p class="card-text"><a href="https://www.home-assistant.io/">https://www.home-assistant.io/</a></p>
         </div>
       </div>
-
       <div class="card mb-5 card_pr">
         <h5 class="card-header header_pr">Components</h5>
         <div class="card-body">
@@ -102,15 +93,11 @@
       </div>
     </div>
   </div>
-
   <footer>
-    <p class="footer headerAnim"> © Philo Klemenz 2022 </p>
+    <p class="footer headerAnim">© Philo Klemenz 2022</p>
   </footer>
   </head>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-    </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="/html/functions/imageAnimation.js"></script>
 </body>
-
 </html>
