--- a/html/pages/mycroft_project.html
+++ b/html/pages/mycroft_project.html
@@ -14,19 +14,17 @@
 </head>
 
 <body>
-
     <div class="container max-w-screen-xl row_pr">
         <div class="projectAnim1">
             <div class="alignCenter">
-                <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
+                <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" alt="Logo"/>
             </div>
-
             <div class="container_ref">
                 <div class="row justify-content-center">
                     <div class="col-auto">
                         <div class="card_Ac">
                             <a class="a_ref" href="../../index.html">
-                                <h1 class="text_navlink p-2 m-2"> Profile </h1>
+                                <h1 class="text_navlink p-2 m-2">Profile</h1>
                             </a>
                         </div>
                     </div>
@@ -39,13 +37,8 @@
                     </div>
                 </div>
             </div>
-
-            <h1 class="header1">
-                Mycroft AI
-            </h1>
-            <h1 class="header2">
-                Privacy First Home Assistant
-            </h1>
+            <h1 class="header1">Mycroft AI</h1>
+            <h1 class="header2">Privacy Home Assistant</h1>
         </div>
         <div id="carouselExampleDark" class="carousel carousel-dark slide mb-5 projectAnim2" data-bs-ride="carousel">
             <div class="carousel-indicators">
@@ -56,68 +49,59 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../../img/mycroft/mc_homepage.png" class="d-block w-100 rounded2 zoomD" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5 class="header_pr">Web Page</h5>
-                        <p class="text_pr">This is the Web GUI, but nearly everything is controlled via the terminal.
-                        </p>
+                    <img src="../../img/mycroft/mc_homepage.png" class="d-block w-100 rounded2 zoomD" alt="Mycorft Image Homepage">
+                    <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
+                        <h5 class="header_pr">Webpage</h5>
+                        <p class="text_prWhite">This is the Web GUI, but nearly everything is controlled via the terminal.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../../img/mycroft/mc_chatterminal.png" class="d-block w-100 rounded2 zoomD" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5 class="text-white">Terminal GUI</h5>
-                        <p class="text-white">Here you can see the terminal GUI that shows your interactions in a
-                            visual.
-                            Manner.</p>
+                    <img src="../../img/mycroft/mc_chatterminal.png" class="d-block w-100 rounded2 zoomD" alt="Mycroft Image Terminal">
+                    <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
+                        <h5 class="text-white">Terminal-GUI</h5>
+                        <p class="text_prWhite">Here you can see the terminal GUI that shows your interactions in a visual manner.</p>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
-                    data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 </button>
-                <button class="carousel-control-next grey" type="button" data-bs-target="#carouselExampleDark"
-                    data-bs-slide="next">
+                <button class="carousel-control-next grey" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 </button>
             </div>
         </div>
-
+        <!-- Box for fullscreen view of image! -->
         <div id="lightbox"> </div>
-
         <div class="projectAnim3">
             <div class="card mb-5 card_pr">
                 <h5 class="card-header header_pr">About the Project</h5>
                 <div class="card-body">
                     <h5 class="card-title">Task</h5>
-                    <p class="card-text">The Idea was to deploy Mycroft as a privacy First Home Assistant solution on my
-                        Raspberry Pi to replace my Google home assistant.
+                    <p class="card-text">The Idea was to deploy Mycroft as a privacy-first Home Assistant solution on my
+                        Raspberry Pi to replace my Google Home Assistant.
                     </p>
                     <h5 class="card-title">Functionality</h5>
                     <p class="card-text">I transformed my Raspberry Pi into a Home Assistant, replacing my Google home
-                        because of privacy issues.
-                        After plugging in my external microphone and speaker and installing the Mycroft distribution, I
-                        had
-                        to go through all the setup steps. Due to the great number of settings, I was able to customize
-                        Mycroft to my personal requirements.
+                        because of privacy concerns. After plugging in my external microphone and speaker and installing 
+                        the Mycroft distribution, I had to go through all the setup steps. Due to the great number of 
+                        settings, I was able to customize Mycroft to my personal requirements. After a long debug session and 
+                        all the setup of all my services such as the Home Assistant it worked perfectly fine. The downsides of this 
+                        more private solution are some more delay, not the best compatibility  with external resources and a not to
+                        perfect voice of the assistant.
                     </p>
                 </div>
             </div>
-
             <div class="card mb-5 card_pr">
                 <h5 class="card-header header_pr">Source Project</h5>
                 <div class="card-body">
                     <h5 class="card-title">Homepage</h5>
-                    <p class="card-text"><a href="https://mycroft.ai/" style="text-decoration: none;">mycroft.ai/</a>
-                    </p>
+                    <p class="card-text"><a href="https://mycroft.ai/" style="text-decoration: none;">mycroft.ai/</a></p>
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">GitHub</h5>
-                    <p class="card-text"><a href="https://github.com/MycroftAI"
-                            style="text-decoration: none;">github.com/MycroftAI</a></p>
+                    <p class="card-text"><a href="https://github.com/MycroftAI" style="text-decoration: none;">github.com/MycroftAI</a></p>
                 </div>
             </div>
-
             <div class="card mb-5 card_pr">
                 <h5 class="card-header header_pr">Components</h5>
                 <div class="card-body">
@@ -132,15 +116,11 @@
             </div>
         </div>
     </div>
-
     <footer>
-        <p class="footer headerAnim"> © Philo Klemenz 2022 </p>
+        <p class="footer headerAnim">© Philo Klemenz 2022</p>
     </footer>
     </head>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-        </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="/html/functions/imageAnimation.js"></script>
 </body>
-
 </html>
