--- a/html/pages/projects.html
+++ b/html/pages/projects.html
@@ -17,7 +17,7 @@
     <div class="container max-w-screen-xl pt-5">
         <div class="containerAnimRev">
             <div class="alignCenter">
-                <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
+                <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" alt="Logo"/>
             </div>
             <div class="container_ref">
                 <div class="row justify-content-center">
@@ -41,44 +41,24 @@
         </div>
         <div class="row row-cols-1 row-cols-md-3 g-4 row_pr pConAnim">
             <div class="col">
-                <a class="a_ref" href="./trintel_project.html">
+                <a class="a_ref" href="./ProcessDokuBa_project.html">
                     <div class="card card_pr">
-                        <img src="../../img/trintelV4_transparentB.jpg" class="img_pr" alt="Trintel Logo" />
+                        <img src="../../img/bachelorSeehafenAR_logo.png" class="img_pr" alt="Skyscrapers" />
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
-                                    <h5 class="header_prMain">Trintel</h5>
+                                    <h5 class="header_prMain">AR Process-Documentation</h5>
                                 </div>
-                                <div class="col-md-auto"><i class="fa fa-check-circle green" aria-hidden="true"></i>
+                                <div class="col-md-auto"><i class="fa fa-spinner grey" aria-hidden="true"></i>
                                 </div>
                             </div>
                             <p class="text_pr">
-                                This was a Team project with a couple of students as a Uni project.
-                                We constructed a web app for a "Planspiel" at the RBZ Kiel.
+                                This is my bachelor thesis in which i developed Augmented Reality Tools to
+                                document processes in logistics.
                             </p>
                         </div>
                     </div>
                 </a>
-            </div>
-            <div class="col">
-                <!--<a class="a_ref" href="">-->
-                <div class="card card_pr">
-                    <img src="../../img/bachelorSeehafenAR_logo.png" class="img_pr" alt="Skyscrapers" />
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-md-auto">
-                                <h5 class="header_prMain">AR Process-Documentation</h5>
-                            </div>
-                            <div class="col-md-auto"><i class="fa fa-spinner grey" aria-hidden="true"></i>
-                            </div>
-                        </div>
-                        <p class="text_pr">
-                            This is my bachelors thesis in which i developed Augmented Reality Tools to
-                            Document Processes in logistics.
-                        </p>
-                    </div>
-                </div>
-                <!--</a>-->
             </div>
             <div class="col">
                 <a class="a_ref" href="./nudelcloud_project.html">
@@ -93,9 +73,8 @@
                                 </div>
                             </div>
                             <p class="text_pr">
-                                My own public cloud based on Nextcloud, offering a variety of functions from normal
-                                storage over a mail client to
-                                little apps such as a canban board.
+                                My own public cloud based on Nextcloud, offering a variety of functions, 
+                                applications and a lot more.
                             </p>
                         </div>
                     </div>
@@ -115,7 +94,27 @@
                             </div>
                             <p class="text_pr">
                                 My own public search engine based on Searxng. I deployed this solution due to privacy
-                                concerns.
+                                concerns and security.
+                            </p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col">
+                <a class="a_ref" href="./trintel_project.html">
+                    <div class="card card_pr">
+                        <img src="../../img/trintelV4_transparentB.jpg" class="img_pr" alt="Trintel Logo" />
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-md-auto">
+                                    <h5 class="header_prMain">Trintel</h5>
+                                </div>
+                                <div class="col-md-auto"><i class="fa fa-check-circle green" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                            <p class="text_pr">
+                                This was a team project with a couple of students as a Uni project.
+                                We constructed a web app for a "Planspiel" at the RBZ Kiel.
                             </p>
                         </div>
                     </div>
@@ -132,27 +131,9 @@
                                 </div>
                                 <div class="col-md-auto"><i class="fa fa-spinner grey" aria-hidden="true"></i></div>
                             </div>
-                            <p class="text_pr">A web page built from scratch to return to HTML & CSS. Furthermore I
-                                learned about DNS management.</p>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col">
-                <a class="a_ref" href="./youstage_project.html">
-                    <div class="card card_pr">
-                        <img src="../../img/YouStageLogo1.png" class="img_pr" alt="Palm Springs Road" />
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-md-auto">
-                                    <h5 class="header_prMain">YouStage</h5>
-                                </div>
-                                <div class="col-md-auto"><i class="fa fa-check-circle green" aria-hidden="true"></i>
-                                </div>
-                            </div>
                             <p class="text_pr">
-                                This is a prototype for a concept application to begin with flutter.
-                                Originally it was a student project.
+                                A web page built from scratch to return to HTML & CSS. Furthermore I
+                                learned about DNS management.
                             </p>
                         </div>
                     </div>
@@ -196,14 +177,31 @@
                     </div>
                 </a>
             </div>
+            <div class="col">
+                <a class="a_ref" href="./youstage_project.html">
+                    <div class="card card_pr">
+                        <img src="../../img/YouStageLogo1.png" class="img_pr" alt="Palm Springs Road" />
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-md-auto">
+                                    <h5 class="header_prMain">YouStage</h5>
+                                </div>
+                                <div class="col-md-auto"><i class="fa fa-check-circle green" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                            <p class="text_pr">
+                                This is a prototype for a concept application to begin with flutter.
+                                Originally it was a student project.
+                            </p>
+                        </div>
+                    </div>
+                </a>
+            </div>
         </div>
-
         <footer>
-            <p class="footer headerAnim"> © Philo Klemenz 2022 </p>
+            <p class="footer headerAnim">© Philo Klemenz 2022</p>
         </footer>
         </head>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-        </script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
