--- a/html/pages/trintel_project.html
+++ b/html/pages/trintel_project.html
@@ -14,19 +14,17 @@
 </head>
 
 <body>
-
   <div class="container max-w-screen-xl row_pr">
     <div class="projectAnim1">
       <div class="alignCenter">
-        <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
+        <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" alt="Logo"/>
       </div>
-
       <div class="container_ref">
         <div class="row justify-content-center">
           <div class="col-auto">
             <div class="card_Ac">
               <a class="a_ref" href="../../index.html">
-                <h1 class="text_navlink p-2 m-2"> Profile </h1>
+                <h1 class="text_navlink p-2 m-2">Profile</h1>
               </a>
             </div>
           </div>
@@ -39,13 +37,8 @@
           </div>
         </div>
       </div>
-
-      <h1 class="header1">
-        Trintel
-      </h1>
-      <h1 class="header2">
-        Business Transaction Intel
-      </h1>
+      <h1 class="header1">Trintel</h1>
+      <h1 class="header2">Business Transaction Intel</h1>
     </div>
     <div id="carouselExampleDark" class="carousel carousel-dark slide mb-5 projectAnim2" data-bs-ride="carousel">
       <div class="carousel-indicators">
@@ -59,91 +52,87 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../../img/trintel/trintel_login.png" class="d-block w-100 rounded2 zoomD" alt="...">
-          <div class="carousel-caption d-none d-md-block">
+          <img src="../../img/trintel/trintel_login.png" class="d-block w-100 rounded2 zoomD" alt="Trintel LogIn Image">
+          <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
             <h5 class="header_pr">LogIn Page.</h5>
-            <p class="text_pr">Here you can log in with your registered Account.</p>
+            <p class="text_prWhite">Here you can log in with your registered Account.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="../../img/trintel/trintel_adminpanel.png" class="d-block w-100 rounded2 zoomD" alt="...">
-          <div class="carousel-caption d-none d-md-block">
+          <img src="../../img/trintel/trintel_adminpanel.png" class="d-block w-100 rounded2 zoomD" alt="trintel Adminpanel Image">
+          <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
             <h5 class="header_pr">Admin Panel.</h5>
-            <p class="text_pr">As an administrator, you can access special tools in the Admin Panel.</p>
+            <p class="text_prWhite">As an administrator, you can access special tools in the Admin Panel.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="../../img/trintel/trintel_Unternehmensseite.png" class="d-block w-100 rounded2 zoomD" alt="...">
-          <div class="carousel-caption d-none d-md-block">
+          <img src="../../img/trintel/trintel_Unternehmensseite.png" class="d-block w-100 rounded2 zoomD" alt="Trintel Company Page Image">
+          <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
             <h5 class="header_pr">Company Page.</h5>
-            <p class="text_pr">In this case, as an administrator, you can see and edit all companies.</p>
+            <p class="text_prWhite">In this case, as an administrator, you can see and edit all companies.</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="../../img/trintel/trintel_Schuelerseite.png" class="d-block w-100 rounded2 zoomD" alt="...">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
             <h5 class="header_pr">Student Page.</h5>
-            <p class="text_pr">As an administrator, you can control and search through all student accounts.</p>
+            <p class="text_prWhite">As an administrator, you can control and search through all student accounts.</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="../../img/trintel/trintel_Transaktionsseite.png" class="d-block w-100 rounded2 zoomD" alt="...">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
             <h5 class="header_pr">Transaction Page.</h5>
-            <p class="text_pr">The administrator can see all made transactions from all companies in this tab.</p>
+            <p class="text_prWhite">The administrator can see all made transactions from all companies in this tab.</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="../../img/trintel/trintel_Statistikseite.png" class="d-block w-100 rounded2 zoomD" alt="...">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
             <h5 class="header_pr">Statistics.</h5>
-            <p class="text_pr">The administrator can see all system-wide statistics.</p>
+            <p class="text_prWhite">The administrator can see all system-wide statistics.</p>
           </div>
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       </button>
-      <button class="carousel-control-next grey" type="button" data-bs-target="#carouselExampleDark"
-        data-bs-slide="next">
+      <button class="carousel-control-next grey" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
       </button>
     </div>
-
+    <!-- Box for fullscreen view of image! -->
     <div id="lightbox"> </div>
-
     <div class="projectAnim3">
       <div class="card mb-5 card_pr slideUpVeryLong">
         <h5 class="card-header header_pr">About the Project</h5>
         <div class="card-body">
           <h5 class="card-title">Task</h5>
-          <p class="card-text">The task of this project consisted in building a website for the RBZ Kiel. The customer
+          <p class="card-text">
+            The task of this project consisted in building a website for the RBZ Kiel. The customer
             wanted a software to support their students in their Business Simulation by monitoring their transactions
-            with
-            their imaginary business. We had two weeks to complete this task and present it to the RBZ.
+            with their imaginary business. We had two weeks to complete this task and present it to the RBZ.
           </p>
           <h5 class="card-title">Functionality</h5>
-          <p class="card-text">Our software provides the basic features like user roles with different interfaces, as
-            well
-            as the Companies and their transactions. A user is then able to perform transactions with their company and
-            get feedback from the software in the form of statistics, sales history or order confirmation. In addition,
-            it
+          <p class="card-text">
+            Our software provides the basic features like user roles with different interfaces, as
+            well as the Companies and their transactions. A user is then able to perform transactions with their company and
+            get feedback from the software in the form of statistics, sales history or order confirmation. In addition, it
             is possible for the administrator to adjust the entire simulation.
           </p>
         </div>
       </div>
-
       <div class="card mb-5 card_pr">
         <h5 class="card-header header_pr">Repository</h5>
         <div class="card-body">
           <h5 class="card-title">GitLab</h5>
           <p class="card-text"><a
               href="https://cau-git.rz.uni-kiel.de/ifi-ag-se/softwareprojekt/lts-projekte/wise-2122-lms8-017"
-              style="text-decoration: none;">cau-git.rz.uni-kiel.de/ifi-ag-se/softwareprojekt/lts-projekte/wise-2122-lms8-017</a>
+              style="text-decoration: none;">https://cau-git.rz.uni-kiel.de/ifi-ag-se/softwareprojekt/lts-projekte/wise-2122-lms8-017</a>
           </p>
           <h5 class="card-title">GitHub</h5>
           <p class="card-text"><a href="https://github.com/Nudel4ufl4uf/trintel"
-              style="text-decoration: none;">github.com/Nudel4ufl4uf/trintel</a>
+              style="text-decoration: none;">https://ithub.com/Nudel4ufl4uf/trintel</a>
           </p>
         </div>
       </div>
@@ -159,11 +148,10 @@
             <a href="https://github.com/b3z" style="text-decoration: none;">Mayer, Luca; </a>
             <a href="https://github.com/Felioh" style="text-decoration: none;">Ohnesroge, Felix; </a>
             <a href="https://github.com/cwerl" style="text-decoration: none;">Werl, Christopher; </a>
-            <a href="https://github.com/MaxWiendl" style="text-decoration: none;">Wiendel, Max; </a>
+            <a href="https://github.com/MaxWiendl" style="text-decoration: none;">Wiendl, Max; </a>
           </p>
         </div>
       </div>
-
       <div class="card mb-5 card_pr">
         <h5 class="card-header header_pr">Languages</h5>
         <div class="card-body">
@@ -209,15 +197,11 @@
       </div>
     </div>
   </div>
-
   <footer>
-    <p class="footer headerAnim"> © Philo Klemenz 2022 </p>
+    <p class="footer headerAnim">© Philo Klemenz 2022</p>
   </footer>
   </head>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-    </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="/html/functions/imageAnimation.js"></script>
 </body>
-
 </html>
