--- a/html/pages/webpage_project.html
+++ b/html/pages/webpage_project.html
@@ -14,18 +14,17 @@
 </head>
 
 <body>
-
     <div class="container max-w-screen-xl row_pr">
         <div class="projectAnim1">
             <div class="alignCenter">
-                <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
+                <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" alt="Logo"/>
             </div>
             <div class="container_ref">
                 <div class="row justify-content-center">
                     <div class="col-auto">
                         <div class="card_Ac">
                             <a class="a_ref" href="../../index.html">
-                                <h1 class="text_navlink p-2 m-2"> Profile </h1>
+                                <h1 class="text_navlink p-2 m-2">Profile</h1>
                             </a>
                         </div>
                     </div>
@@ -38,44 +37,36 @@
                     </div>
                 </div>
             </div>
-            <h1 class="header1">
-                Webpage
-            </h1>
-            <h1 class="header2">
-                Profile Site
-            </h1>
+            <h1 class="header1">Webpage</h1>
+            <h1 class="header2">Profile Site</h1>
         </div>
-
         <div class="mb-5 projectAnim2">
-            <img src="../../img/website/website_landing.png" class="d-block w-100 rounded2 zoomD" alt="...">
+            <img src="../../img/website/website_landing.png" class="d-block w-100 rounded2 zoomD" alt="Webpage Image">
         </div>
-
+        <!-- Box for fullscreen view of image! -->
         <div id="lightbox"> </div>
-
         <div class="projectAnim3">
             <div class="card mb-5 card_pr">
                 <h5 class="card-header header_pr">Online Instance</h5>
                 <div class="card-body">
-                    <p class="card-text"><a href="https://profile.philoklemenz.de/">profile.philoklemenz.de/</a>
-                    </p>
+                    <p class="card-text"><a href="https://profile.philoklemenz.de/">profile.philoklemenz.de/</a></p>
                 </div>
             </div>
-
             <div class="card mb-5 card_pr">
                 <h5 class="card-header header_pr">About the Project</h5>
                 <div class="card-body">
                     <h5 class="card-title">Task</h5>
-                    <p class="card-text">I wanted to get back into HTML and CSS and furthermore learn about DNS
+                    <p class="card-text">
+                        I wanted to get back into HTML and CSS and furthermore learn about DNS
                         registration, so I build this webpage from scratch.
                     </p>
                     <h5 class="card-title">Functionality</h5>
-                    <p class="card-text">The webpage is just a static website to represent some links and information
-                        about
-                        me. In the process, I added another page showing my projects I have done, or I am doing.
+                    <p class="card-text">
+                        The webpage is just a static website to represent some links and information
+                        about me. In the process, I added another page showing my projects I have done, or I am doing.
                     </p>
                 </div>
             </div>
-
             <div class="card mb-5 card_pr">
                 <h5 class="card-header header_pr">Languages</h5>
                 <div class="card-body">
@@ -99,12 +90,10 @@
     </div>
 
     <footer>
-        <p class="footer headerAnim"> © Philo Klemenz 2022 </p>
+        <p class="footer headerAnim">© Philo Klemenz 2022</p>
     </footer>
     </head>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-        </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="/html/functions/imageAnimation.js"></script>
 </body>
 
