--- a/html/pages/youstage_project.html
+++ b/html/pages/youstage_project.html
@@ -18,15 +18,14 @@
   <div class="container max-w-screen-xl row_pr">
     <div class="projectAnim1">
       <div class="alignCenter">
-        <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
+        <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" alt="Logo"/>
       </div>
-
       <div class="container_ref">
         <div class="row justify-content-center">
           <div class="col-auto">
             <div class="card_Ac">
               <a class="a_ref" href="../../index.html">
-                <h1 class="text_navlink p-2 m-2"> Profile </h1>
+                <h1 class="text_navlink p-2 m-2">Profile</h1>
               </a>
             </div>
           </div>
@@ -39,37 +38,30 @@
           </div>
         </div>
       </div>
-      <h1 class="header1">
-        Youstage
-      </h1>
-      <h1 class="header2">
-        The Stage is Yours!
-      </h1>
+      <h1 class="header1">Youstage</h1>
+      <h1 class="header2">The Stage is Yours!</h1>
     </div>
     <div class="m-3 projectAnim2">
       <img src="../../img/youstage/youstage_pages.png" class="d-block w-100 rounded2 zoomD" alt="...">
     </div>
-
+    <!-- Box for fullscreen view of image! -->
     <div id="lightbox"> </div>
-
     <div class="projectAnim3">
       <div class="card mb-5 card_pr">
         <h5 class="card-header header_pr">About the Project</h5>
         <div class="card-body">
           <h5 class="card-title">Task</h5>
-          <p class="card-text">The YouStage application is a prototype based upon a student project from early 2020. In
+          <p class="card-text">
+            The YouStage application is a prototype based upon a student project from early 2020. In
             the planning phase, the idea was to become familiar with the prototype process. Once the module was
-            completed,
-            I dived deeper by doing a front-end-only application with flutter to find out more about flutter and git.
+            completed, I dived deeper by doing a front-end-only application with flutter to find out more about flutter and git.
           <h5 class="card-title">Functionality</h5>
-          <p class="card-text">The project was intended to serve as a platform for a variety of artists who are unable
-            to
-            perform as normal due to COVID-19. It is supposedly a platform like Twitch, but with more interactive
-            features
-            for the artist in particular. Most of the requirements may be seen in the "Anforderungsanalysis" in you
+          <p class="card-text">
+            The project was intended to serve as a platform for a variety of artists who are unable
+            to perform as normal due to COVID-19. It is supposedly a platform like Twitch, but with more interactive
+            features for the artist in particular. Most of the requirements may be seen in the "Anforderungsanalysis" in you
             stadium/ Prototype. After the project crashed due to the end of the semester in the middle of 2020, it was
-            my
-            idea to keep it alive in the form of a small prototype. The full Prototype can be seen under
+            my idea to keep it alive in the form of a small prototype. The full Prototype can be seen under
             youstage/Prototype.
           </p>
         </div>
@@ -90,23 +82,20 @@
           <div>
             <h3 class="ls-tight font-bolder display-9 mb-3 m-3">Dart</h3>
             <div class="progress m-3">
-              <div class="progress-bar" role="progressbar" style="--value:98.2%" aria-valuenow="64.4" aria-valuemin="0"
-                aria-valuemax="100">98.2%</div>
+              <div class="progress-bar" role="progressbar" style="--value:98.2%" aria-valuenow="64.4" aria-valuemin="0" aria-valuemax="100">98.2%</div>
             </div>
           </div>
           <div>
             <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Swift</h3>
             <div class="progress m-3">
-              <div class="progress-bar" role="progressbar" style="--value:1.3%" aria-valuenow="31.3" aria-valuemin="0"
-                aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" style="--value:1.3%" aria-valuenow="31.3" aria-valuemin="0" aria-valuemax="100"></div>
               <div class="px-2">1.3%</div>
             </div>
           </div>
           <div>
             <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Other</h3>
             <div class="progress m-3">
-              <div class="progress-bar" role="progressbar" style="--value:0.5%" aria-valuenow="0.1" aria-valuemin="0"
-                aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" style="--value:0.5%" aria-valuenow="0.1" aria-valuemin="0" aria-valuemax="100"></div>
               <div class="px-2">0.5%</div>
             </div>
           </div>
@@ -115,12 +104,10 @@
       </div>
     </div>
     <footer>
-      <p class="footer headerAnim"> © Philo Klemenz 2022 </p>
+      <p class="footer headerAnim">© Philo Klemenz 2022</p>
     </footer>
     </head>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-      </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="/html/functions/imageAnimation.js"></script>
 </body>
 
